Resolves vertical alignment issue for kbd

--- a/src/components/quick-exit/_quick-exit.scss
+++ b/src/components/quick-exit/_quick-exit.scss
@@ -40,8 +40,8 @@
 
   kbd {
     background-color: transparent;
-    border: 1px solid var(--nsw-white);
     color: var(--nsw-text-light);
+    border: 1px solid var(--nsw-white);
   }
 
   &__content {
@@ -104,14 +104,12 @@
       clip: auto;
       white-space: normal;
       display: inline;
-      line-height: 0;
     }
   }
 
   &__exit-text {
     display: inline;
     font-weight: 700;
-    line-height: 0;
 
     &::after {
       content: 'east';
