--- a/src/core/typography/_typography.scss
+++ b/src/core/typography/_typography.scss
@@ -138,20 +138,17 @@ hr {
 
 kbd {
   background-color: var(--nsw-white);
-  border: 1px solid var(--nsw-grey-04);
   color: var(--nsw-text-dark);
+  border: 1px solid var(--nsw-grey-02);
   font-family: var(--nsw-font-family);
-  font-size: nsw.rem(16px);
   font-weight: 700;
   border-radius: 4px;
-  padding: nsw.rem(6px);
+  padding: nsw.rem(4px);
   margin: 0 nsw.rem(4px);
   min-width: nsw.rem(20px);
-  line-height: 100%;
-  vertical-align: middle;
+  line-height: 1;
   display: inline-flex;
   align-items: center;
-  justify-content: center;
   white-space: nowrap;
 
   .nsw-section--invert & {
